Create new columns on entry for input/output file formats. Migration to prefill based off of it's versions input/output files.
